# uppaal-to-tchecker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.utap  README.md
ci-scripts/: build-and-test.sh  install-sources.sh
cmake/: CheckUTAP.cmake  TestScripts.cmake
doc/: limitations.md  translation.md
src/: CMakeLists.txt  main.cpp  utot-contextprefix.hh  utot-decl.cc  utot-expr.cc  utot-tchecker.hh  utot-translate.cc  utot-translate.hh  utot-version.hh.in  utot.cpp  utot.hh
tests/: CMakeLists.txt  csma_input_03.xml  engine-classic.xml  test-01.xml  test-02.xml  test-03.xml  test-04.xml  train-gate.xml
tests/tchecker-examples/: CMakeLists.txt  ad94.sh  ad94.xta.sh  apply-tchecker.sh  corsso.xta.sh  critical-region-async.xta.sh  critical-region.xta.sh  csmacd.xta.sh  dining-philosophers.xta.sh  fddi.xta.sh  fire-alarm.xta.sh  fischer-async.xta.sh  fischer.xta.sh  gps-mc.xta.sh  leader-election-async.xta.sh  leader-election.xta.sh  parallel-b.xta.sh  parallel-c.xta.sh  parallel.xta.sh  test-driver.sh  train_gate.sh  train_gate.xta.sh
tests/translation/: CMakeLists.txt  array-01.xta  array-02.xta  array-03.xta  array-04.xta  decl-01.xta  decl-02.xta  decl-03.xta  decl-04.xta  decl-04.xta.err-expected  decl-05.xta  decl-06.xta  decl-08.xta  err-01.xta  err-01.xta.tck.err-expected  err-02.xta  err-03.xta  err-03.xta.tck.err-expected  err-04.xta  err-05.xta  err-05.xta.tck.err-expected  err-06.xta  err-06.xta.tck.err-expected  err-07.xta  err-07.xta.tck.err-expected  err-08.xta  err-08.xta.tck.err-expected  err-09.xta  err-09.xta.tck.err-expected  err-11.xta  err-11.xta.tck.err-expected  err-12.xta  err-12.xta.tck.err-expected  err-13.xta  err-13.xta.tck.err-expected  err-14.xta  err-14.xta.tck.err-expected  err-15.xta  err-15.xta.tck.err-expected  errfix-01.xta  (+77 more)
tests/uppaal-examples/: CMakeLists.txt  boxes.xml  druzba1.xml  fischer_input_05.ta  fischer_symmetry.xml  hddi_input_05.ta  interrupt.xml  test-driver.sh  timedsystem.xml  train-gate.xml.tck.err-expected
